// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Investigation details panel component gracefully handles StudyInvestigations without Studies and InvestigationUsers without Users 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="investigations.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="investigation-details-panel"
      id="investigation-details-tab"
      label="investigations.details.label"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="investigation-users-panel"
      id="investigation-users-tab"
      label="investigations.details.users.label"
      value="users"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="investigation-details-tab"
    hidden={false}
    id="investigation-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.name
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.visit_id
        :
      </b>
       
      1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.title
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.summary
        :
      </b>
       
      foo bar
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.doi
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="https://doi.org/doi 1"
      >
        doi 1
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.start_date
        :
      </b>
       
      2019-06-10
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.end_date
        :
      </b>
       
      2019-06-11
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="investigation-users-tab"
    hidden={true}
    id="investigation-users-panel"
    role="tabpanel"
  />
</div>
`;

exports[`Investigation details panel component renders correctly 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="investigations.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="investigation-details-panel"
      id="investigation-details-tab"
      label="investigations.details.label"
      value="details"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="investigation-details-tab"
    hidden={false}
    id="investigation-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.name
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.visit_id
        :
      </b>
       
      1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.title
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.summary
        :
      </b>
       
      foo bar
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      key="11"
      variant="body2"
    >
      <b>
        investigations.details.pid
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="https://doi.org/study pid"
      >
        study pid
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.doi
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="https://doi.org/doi 1"
      >
        doi 1
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.start_date
        :
      </b>
       
      2019-06-10
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.end_date
        :
      </b>
       
      2019-06-11
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;

exports[`Investigation details panel component renders user, sample and publication tabs when present in the data 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="investigations.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="investigation-details-panel"
      id="investigation-details-tab"
      label="investigations.details.label"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="investigation-users-panel"
      id="investigation-users-tab"
      label="investigations.details.users.label"
      value="users"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="investigation-samples-panel"
      id="investigation-samples-tab"
      label="investigations.details.samples.label"
      value="samples"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="investigation-publications-panel"
      id="investigation-publications-tab"
      label="investigations.details.publications.label"
      value="publications"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="investigation-details-tab"
    hidden={false}
    id="investigation-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.name
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.visit_id
        :
      </b>
       
      1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.title
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.summary
        :
      </b>
       
      foo bar
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      key="11"
      variant="body2"
    >
      <b>
        investigations.details.pid
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="https://doi.org/study pid"
      >
        study pid
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.doi
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="https://doi.org/doi 1"
      >
        doi 1
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.start_date
        :
      </b>
       
      2019-06-10
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        investigations.details.end_date
        :
      </b>
       
      2019-06-11
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="investigation-users-tab"
    hidden={true}
    id="investigation-users-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      key="5"
      variant="body2"
    >
      <b>
        investigations.details.users.name
        :
      </b>
       
      Louise Davies
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      key="10"
      variant="body2"
    >
      <b>
        investigations.details.users.name
        :
      </b>
       
      Louise
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="investigation-samples-tab"
    hidden={true}
    id="investigation-samples-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      key="7"
      variant="body2"
    >
      <b>
        investigations.details.samples.name
        :
      </b>
       
      Test sample
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="investigation-publications-tab"
    hidden={true}
    id="investigation-publications-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      key="8"
      variant="body2"
    >
      <b>
        investigations.details.publications.reference
        :
      </b>
       
      Test publication
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;
